<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeaTap</string>
    <string name="action_settings">Settings</string>
    <string name="rank">RANK:</string>
    <string name="rank1">RANK表示</string>
    <string name="score">SCORE:</string>
    <string name="score1">SCORE表示</string>
    <string name="max_combo">MAX COMBO:</string>
    <string name="max_combo1">MAX COMBO表示</string>
    <string name="great">GREAT:</string>
    <string name="great1">GREAT数を表示</string>
    <string name="good">GOOD:</string>
    <string name="good1">GOOD数を表示</string>
    <string name="bad">BAD:</string>
    <string name="bad1">BAD数を表示</string>
    <string name="continu">CONTINUE</string>
	<string name="end">END</string>
</resources>
