<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_silver"
    android:paddingBottom="50dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="305dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/LinearLayout3"
        android:background="@drawable/txtback01"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
        	android:paddingRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/professional_image1" />

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        	android:paddingLeft="@dimen/activity_horizontal_margin"
        	android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            tools:context=".MainActivity" >

            <LinearLayout
                android:id="@+id/LinearLayout2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/max_combo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_combo"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/great"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/great"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#00CC00" />

                <TextView
                    android:id="@+id/good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFFF00" />

                <TextView
                    android:id="@+id/bad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bad"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FF0000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textSCORE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/textMAX_COMBO"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_combo1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/textMAX_GREAT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/great1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#00CC00" />

                <TextView
                    android:id="@+id/textMAX_GOOD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFFF00" />

                <TextView
                    android:id="@+id/textMAX_BAD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bad1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FF0000" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
<FrameLayout 
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_above="@id/LinearLayout3"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/textView1"
    android:layout_centerHorizontal="true"
    android:layout_toRightOf="@+id/linearLayout1" >
     <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/sinkukan4" />
</FrameLayout>
    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout1"
        android:layout_alignParentRight="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/continue_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_weight="1"
            android:textColor="#FFFF00"
            android:text="@string/continu" />

        <Button
            android:id="@+id/end_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_weight="1"
            android:textColor="#FFFF00"
            android:text="@string/end" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_toRightOf="@+id/linearLayout1"
        android:background="@drawable/txtback01"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="TextView"
        android:textColor="#FFFFFF" />

</RelativeLayout>